--- a/audiobooking/text-inputs/solidarity-with-palestine-grows.html
+++ b/audiobooking/text-inputs/solidarity-with-palestine-grows.html
@@ -1,6 +1,6 @@
 <div class="col-6 col-push-1 col-tiny-12 col-tiny-push-0">
   <div class="article-header">
-    <h1>Editorial: Amidst a genocide, solidarity with Palestine grows</h1>
+    <h1>Amidst a genocide, solidarity with Palestine grows</h1>
     <div class="topics">
       <a href="/?topic=debates" previewlistener="true">#Left Debates</a>
       <a href="/?topic=middle-east" previewlistener="true">#Middle East</a>
