Enhance audiobook generation by implementing HTML file processing and gender detection. Update longTextToAudio function to support automatic gender determination based on author name extracted from HTML. Refactor voice selection logic to accommodate gender-specific voices. Update README with new parameters and usage instructions.

--- a/audiobooking/text-inputs/example.html
+++ b/audiobooking/text-inputs/example.html
@@ -3,18 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Example Article</title>
-  <style>
-    .author {
-      color: #666;
-      font-style: italic;
-      margin-bottom: 20px;
-      display: block;
-    }
-  </style>
 </head>
 <body>
   <h1>Example Article</h1>
-  <span class="author">By Example Author</span>
+  <span class="author">Jessica Rabbit</span>
   <div class="article-content">
     <p>This is an example article file that demonstrates the format used for scraped articles.</p>
     <p>The actual article content will be placed in this div with class "article-content".</p>
@@ -24,7 +16,6 @@
     <p>Articles typically contain:</p>
     <ul>
       <li>A title as an H1 heading</li>
-      <li>The author in a span with class "author" (which can be easily hidden with CSS if needed)</li>
       <li>The content in this div</li>
       <li>Various HTML elements like paragraphs, headings, lists, etc.</li>
     </ul>
